added new color palette

--- a/src/webdev/webdev.html
+++ b/src/webdev/webdev.html
@@ -26,7 +26,7 @@
             <p>Extensive practice with HTML5, CSS, Javascript (React, JQuery, Angular)<br>
             Experience using babel to transpilate HTML to provide expanded compatibility<br>
             Experience with Wordpress templates and Bootstrap<br><br>
-            Completed <a href="codecademy.com">Codecademy.com</a> Web Development course, including all additional projects</p>
+            Completed <a href="https://www.codecademy.com">Codecademy.com</a> Web Development course, including all supplementary projects</p>
             <h2>Computer Science Skills</h2>
             <p>BA in Computer Science from Oberlin College of Arts & Sciences<br>
             Expertise in Java, Python, C<br>
