--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="shortcut icon" href="resources/logo.jpg">
 
         <!-- link to jquery and the index.js script-->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+        <script src="jquery-3.7.1.min.js"></script>
         <script src="./index.js"></script>
     </head>
     <body>
@@ -33,10 +33,10 @@
         <div class="subjects">
             <h1>Creative Subjects</h1>
             <div class="subj_container"> 
-                <div class = "subject1">
+                <div class = "subject subject1">
                     <h2 id = "light_link">Lighting</h2>
                 </div>
-                <div class = "subject2">
+                <div class = "subject subject2">
                     <h2 id="web_link">Web Design</h2>
                 </div>
             </div>
